kubernetes/apps/surviving-chernarus/pihole-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
  namespace: surviving-chernarus
  labels:
    app: pihole
    component: dns
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web-service
  namespace: surviving-chernarus
  labels:
    app: pihole
    component: web
spec:
  selector:
    app: pihole
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
